# light-dict

./: Makefile  README.md  _ldocr.fish  ldocr.sh  meson.build
cli/: _ldocr.fish  _ldocr.sh  gen-icon.js  gen-icons.js
light-dict@tuberry.github.io/: extension.js  fields.js  ldocr.py  metadata.json  prefs.js  stylesheet.css  ui.js
light-dict@tuberry.github.io/locale/: light-dict.pot
light-dict@tuberry.github.io/locale/nl/LC_MESSAGES/: gnome-shell-extension-light-dict.po
light-dict@tuberry.github.io/locale/zh_CN/LC_MESSAGES/: gnome-shell-extension-light-dict.po  light-dict.mo  light-dict.po
light-dict@tuberry.github.io/schemas/: gschemas.compiled  org.gnome.shell.extensions.light-dict.gschema.xml
po/: POTFILES.in  nl.po  zh_CN.po
res/data/: dbus.xml.in  extension.gresource.xml.in  meson.build  prefs.gresource.xml.in
res/data/scalable/status/: meson.build
res/data/theme/: meson.build  style.scss
res/icon/: meson.build
res/icons/: meson.build
res/schema/: schemas.gschema.xml  schemas.gschema.xml.in
res/schemas/: org.gnome.shell.extensions.light-dict.gschema.xml
res/style/: stylesheet.scss
res/styles/: stylesheet.scss
src/: const.js  extension.js  ldocr.py  prefs.js  ui.js  util.js
